[project]
classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "omero-py>=5.6.0",
  "prometheus-client==0.2.*",
  "zeroc-ice",                # see 'tool.uv.sources' section below
]
description = 'Tools for monitoring OMERO with Prometheus'
name = "omero-prometheus-tools"
readme = "README.md"
requires-python = ">=3.8"
version = '0.2.4.dev0'

[project.scripts]
omero-prometheus-tools = "omero_prometheus_tools.cli:main_entry_point"

[tool.uv]
package = true

[tool.uv.sources]
zeroc-ice = [
  { marker = "python_full_version == '3.8.*' and sys_platform == 'linux'", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp38-cp38-manylinux_2_28_x86_64.whl" },
  { marker = "python_full_version == '3.9.*' and sys_platform == 'linux'", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp39-cp39-manylinux_2_28_x86_64.whl" },
  { marker = "python_full_version == '3.10.*' and sys_platform == 'linux'", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp310-cp310-manylinux_2_28_x86_64.whl" },
  { marker = "python_full_version == '3.11.*' and sys_platform == 'linux'", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp311-cp311-manylinux_2_28_x86_64.whl" },
  { marker = "python_full_version == '3.12.*' and sys_platform == 'linux'", url = "https://github.com/glencoesoftware/zeroc-ice-py-linux-x86_64/releases/download/20240202/zeroc_ice-3.6.5-cp312-cp312-manylinux_2_28_x86_64.whl" },
]

[build-system]
requires = ["uv_build>=0.7.11,<0.8.0"]
build-backend = "uv_build"
